# cvx

./: CMakeLists.txt  README.md
CMake/: Applications.cmake  Config.cmake.in  Modules.cmake  Setup.cmake
apps/osm_tools/: CMakeLists.txt  dem.cpp  graph.cpp  make_osm_pois.cpp  osm_parser.cpp  osm_parser.hpp  poi_writer.cpp
cmake/: Config.cmake.in  dependencies.cmake  install.cmake  setup.cmake
include/cvx/camera/: camera.hpp
include/cvx/geometry/: kdtree.hpp  line.hpp  line_fit.hpp  octree.hpp  point.hpp  point_list.hpp  polygon.hpp  polygon_scanner.hpp  rectangle.hpp  triangle.hpp  triangulate.hpp  trimesh_topology.hpp  util.hpp  viewpoint_sampler.hpp
include/cvx/imgproc/: concomp.hpp  gabor.hpp  rgbd.hpp
include/cvx/math/: ransac.hpp  rng.hpp
include/cvx/misc/: application_settings.hpp  arg_parser.hpp  base64.hpp  binary_stream.hpp  config.hpp  cv_helpers.hpp  database.hpp  dictionary.hpp  dir_iterator.hpp  filesystem.hpp  format.hpp  json_reader.hpp  json_writer.hpp  logger.hpp  optional.hpp  parallel.hpp  path.hpp  progress_stream.hpp  regex.hpp  sequence.hpp  strings.hpp  timer.hpp  variant.hpp  xml_pull_parser.hpp  xml_sax_parser.hpp  xml_writer.hpp  zstream.hpp
modules/calib/src/: CMakeLists.txt
modules/db/: CMakeLists.txt
modules/db/include/cvx/db/: connection.hpp  connection_handle.hpp  exception.hpp  query.hpp  query_result.hpp  query_result_handle.hpp  statement.hpp  statement_handle.hpp  transaction.hpp  types.hpp
modules/db/src/: CMakeLists.txt  connection.cpp  driver_factory.cpp  driver_factory.hpp  exception.cpp  query.cpp  query_result.cpp  statement.cpp  statement_handle.cpp  transaction.cpp
modules/db/src/drivers/sqlite/: connection.hpp  driver.hpp  exceptions.hpp  query_result.cpp  query_result.hpp  statement.cpp  statement.hpp
modules/db/test/: CMakeLists.txt  dem.hpp  graph.cpp  graph.hpp  make_osm_graph.cpp  make_osm_pois.cpp  osm_parser.cpp  osm_parser.hpp  poi_config.cpp  poi_config.hpp  poi_writer.cpp  poi_writer.hpp
modules/gfx/src/: CMakeLists.txt  color.cpp  image.cpp  path.cpp  pen.cpp  text_layout.cpp
modules/gfx/src/backends/cairo/: canvas.cpp  font_manager.cpp  text.cpp  text_layout_engine.cpp  text_layout_engine.hpp  text_path.cpp
modules/gfx/src/impl/: canvas.cpp  font_manager.hpp  surface.cpp  text_layout_engine.cpp  text_layout_engine.hpp  text_path.cpp
modules/gfx/src/plot/: axis.cpp  line_graph.cpp  markers.cpp  plot.cpp
modules/gfx/src/svg/: svg_document.cpp  svg_dom.cpp  svg_dom.hpp  svg_dom_attributes.hpp  svg_length.hpp  svg_parse_util.cpp  svg_parse_util.hpp  svg_parser.cpp  svg_parser.hpp  svg_render_context.cpp  svg_render_context.hpp  svg_style.cpp  svg_style.hpp  svg_style_attributes.hpp
modules/gfx/src/util/: dictionary.cpp  strings.cpp
modules/util/src/: CMakeLists.txt
modules/util/src/geometry/: kdtree.cpp  viewpoint_sampler.cpp
modules/util/src/imgproc/: concomp.cpp  gabor.cpp
modules/util/src/misc/: base64.cpp  dir_iterator.cpp  filesystem.cpp  format.cpp  json_reader.cpp  json_writer.cpp  strings.cpp  xml_sax_parser.cpp  xml_writer.cpp
modules/util/test/: CMakeLists.txt  mhx2_importer.cpp  mhx2_importer.hpp  test_argparse.cpp  test_dataset.cpp  test_format.cpp  test_geometry.cpp  test_json.cpp  test_scanner.cpp  test_strings.cpp  test_xml.cpp
modules/viz/src/: CMakeLists.txt
modules/viz/src/gui/: glfw_viewer.cpp  glfw_window.cpp  simple_qt_viewer.cpp
modules/viz/src/physics/: collision.cpp  constraints.cpp  kinematic.cpp  multi_body.cpp  rigid_body.cpp  sensor.cpp  soft_body.cpp  world.cpp
modules/viz/src/renderer/: mesh_data.cpp  mesh_data.hpp  ogl_shaders.cpp  renderer.cpp  renderer_impl.cpp  renderer_impl.hpp  shadow_map.cpp  shadow_map.hpp  text_item.cpp
modules/viz/src/renderer/gl/: gl3w.c
modules/viz/src/robot/: robot_scene.cpp  urdf_loader.cpp  urdf_loader.hpp  urdf_robot.cpp
modules/viz/src/scene/: assimp_loader.cpp  camera.cpp  geometry.cpp  material.cpp  mesh.cpp  pbr_material.cpp  scene.cpp  texture.cpp
modules/viz/test/: CMakeLists.txt  test_animation.cpp  test_animation.hpp  test_offscreen.cpp  test_point_cloud.cpp  test_qt.cpp  test_renderer.cpp  test_robot.cpp  test_shapes.cpp  test_ws.cpp
modules/viz/test/bullet/: CMakeLists.txt  bullet_gui.cpp  bullet_gui.hpp  index.html.1  multi_body.cpp  multi_body.hpp  physics.hpp  test_bullet.cpp  test_cartpole.cpp  test_cloth.cpp  test_gripper.cpp  test_robot.cpp  test_rope.cpp
modules/viz/test/mh/: CMakeLists.txt  mesh_utils.cpp  mesh_utils.hpp  mh_model.hpp  mh_scene.cpp  mh_scene.hpp  mhx2_importer.cpp  mhx2_importer.hpp  pose.cpp  pose.hpp  skeleton.cpp  skeleton.hpp  skinned_mesh.cpp  skinned_mesh.hpp  test_mh.cpp  vcg_mesh.cpp  vcg_mesh.hpp
modules/viz/test/mh/data/: human.fbx
modules/viz/test/openni/: CMakeLists.txt  openni_grabber.cpp  openni_grabber.hpp  rgbd_viewer.cpp  rgbd_viewer.hpp
modules/viz/test/pbd/: CMakeLists.txt  pbd_fix.patch  test_pbd_cloth.cpp
src/: CMakeLists.txt
src/geometry/: kdtree.cpp  octree.cpp  polygon_scanner.cpp  triangulate.cpp  trimesh_topology.cpp  util.cpp  viewpoint_sampler.cpp
src/imgproc/: concomp.cpp  gabor.cpp  rgbd.cpp
src/math/: lm_impl.cpp  rng.cpp
src/misc/: application_settings.cpp  arg_parser.cpp  base64.cpp  binary_stream.cpp  config.cpp  config.hpp  cv_helpers.cpp  database.cpp  dictionary.cpp  dir_iterator.cpp  dir_iterator_unix.cpp  dir_iterator_unix.hpp  filesystem.cpp  format.cpp  json_reader.cpp  json_tokenizer.cpp  json_tokenizer.hpp  json_writer.cpp  logger.cpp  path.cpp  path_unix.cpp  progress_stream.cpp  sequence.cpp  strings.cpp  variant.cpp  xml_pull_parser.cpp  xml_sax_parser.cpp  xml_writer.cpp  zstream.cpp
src/pcl/: align.cpp  icp.cpp
src/viz/: gnuplot.cpp
test/: CMakeLists.txt  kml.hpp  mhx2_importer.cpp  mhx2_importer.hpp  test_appsettings.cpp  test_argparse.cpp  test_dataset.cpp  test_format.cpp  test_geometry.cpp  test_lm.cpp  test_logger.cpp  test_path.cpp  test_polyscanner.cpp  test_scanner.cpp  test_solvers.cpp  test_strings.cpp  test_triangulate.cpp  test_xml.cpp
test/old/: test_json.cpp  test_linefit.cpp
(+99 files in other folders)
